k8s/cometchat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cometchat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cometchat-front-service
                port:
                  number: 5173
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cometchat-back-service
                port:
                  number: 3002
